--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
-}
+ 
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ .ethereum-page{
+  width: 100vw;
+  height:100vh;
+ 
+  position: relative;
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+ .content{
+  width: 50%;
+  min-width: 500px;
+  min-height: 500px; 
+  border: 1px solid #f8f8f8;
+  box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.8);
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  overflow: hidden;
+ 
+ }
+ 
+ .content .item{
+   width: 100%;
+   display: flex; 
+   align-items: center;
+   padding: 10px;
+   margin: 10px;
+ } 
+ .btn{
+   margin-left: 10px;
+ }
+ .label{
+   flex: 0 0 100px;
+ }
+ .value{ 
+  flex: 0 0 40%; 
+  padding: 5px 0;
+  margin-left: 10px;
+ }
